--- a/faculty-change-password.html
+++ b/faculty-change-password.html
@@ -9,7 +9,17 @@
             }
         </style>
     </head>
- 
+    <header>
+        <div class="topnav">
+            <h1>Faculty Dashboard</h1>
+            <ul>
+                <li><a href="facultyDB.html">Mark Attendance</a></li>
+                <li><a href="search-student.html">Search Student</a></li>
+                <li><a href="#">Change Password</a></li>
+                <li><a href="index.html">Log Out</a></li>
+            </ul>
+        </div>
+    </header>
 
     <body class="fchangepwd">
         <div class="fcpwd">
