--- a/student-change-password.html
+++ b/student-change-password.html
@@ -9,7 +9,16 @@
             }
         </style>
     </head>
-    
+    <header>
+        <div class="topnav1">
+            <h1>Student Dashboard</h1>
+            <ul>
+                <li><a href="studentDB.html">View Attendance</a></li>
+                <li><a href="#">Change Password</a></li>
+                <li><a href="index.html">Log Out</a></li>
+            </ul>
+        </div>
+    </header>
 
     <body class="schangepwd">
         <div class="scpwd">
