--- a/studentDB.html
+++ b/studentDB.html
@@ -9,6 +9,17 @@
             }
         </style>
     </head>
+    <header>
+        <div class="topnav1">
+        <h1>Student Dashboard</h1>
+        <nav>
+            <ul>
+                <li><a href="#">View Attendance</a></li>
+                <li><a href="student-change-password.html">Change Password</a></li>
+                <li><a href="Logout.php">Log Out</a></li>
+            </ul>
+        </nav></div>
+    </header>
     <body class="studentdb">
         <div class="label1">
         <label for="Subject">Choose a Subject:</label>
@@ -21,6 +32,7 @@
             <option value="SSK">Softskills</option>
         </select>
         <input type="submit" name="" value="Submit"></div><br><br>
+        <iframe src="viewattendance.html" height="400" width="800" style="border:1px solid black" class="mx-5 my-5"></iframe>
     </body>
     </body>
 </html>
